--- a/app/scss/pane.scss
+++ b/app/scss/pane.scss
@@ -15,7 +15,7 @@
     display: block;
   }
 
-  &:hover, &:focus {
+  &:hover {
     background-color: darken($WHITE, 10%);
     .heading .actions {
       display: block;
@@ -35,6 +35,9 @@
         border-radius: 0;
         font-size: 12px;
         padding: .25rem .5rem;
+      }
+      &.shown {
+        display: block;
       }
     }
     &:after {
